--- a/reseq/CMakeLists.txt
+++ b/reseq/CMakeLists.txt
@@ -2,14 +2,18 @@
 add_library(utilities utilities.cpp)
 add_library(utilitiesTest utilitiesTest.cpp)
 target_link_libraries(utilitiesTest utilities)
+target_link_libraries(utilitiesTest gtest)
 
 add_library(VectTest VectTest.cpp)
+target_link_libraries(VectTest gtest)
 add_library(SeqQualityStatsTest SeqQualityStatsTest.cpp)
+target_link_libraries(SeqQualityStatsTest gtest)
 
 add_library(Reference Reference.cpp)
 target_link_libraries(Reference utilities)
 add_library(ReferenceTest ReferenceTest.cpp)
 target_link_libraries(ReferenceTest Reference)
+target_link_libraries(ReferenceTest gtest)
 
 add_library(AdapterStats AdapterStats.cpp)
 target_link_libraries(AdapterStats Reference)
@@ -55,6 +59,8 @@ target_link_libraries(DataStats TileStats)
 target_link_libraries(DataStats utilities)
 target_link_libraries(DataStats Reference)
 target_link_libraries(DataStats skewer_matrix)
+target_link_libraries(DataStats ${SEQAN_LIBRARIES})
+target_link_libraries(DataStats ${Boost_LIBRARIES})
 add_library(DataStatsTest DataStatsTest.cpp)
 target_link_libraries(DataStatsTest DataStats)
 target_link_libraries(DataStatsTest AdapterStatsTest)
@@ -70,32 +76,35 @@ target_link_libraries(DataStatsInterface DataStats)
 
 add_library(ProbabilityEstimates ProbabilityEstimates.cpp)
 target_link_libraries(ProbabilityEstimates DataStats)
+target_link_libraries(ProbabilityEstimates ${Boost_LIBRARIES})
 add_library(ProbabilityEstimatesTest ProbabilityEstimatesTest.cpp)
 target_link_libraries(ProbabilityEstimatesTest ProbabilityEstimates)
 
 add_library(Simulator Simulator.cpp)
 target_link_libraries(Simulator Reference)
 target_link_libraries(Simulator DataStats)
+target_link_libraries(Simulator ${SEQAN_LIBRARIES})
+target_link_libraries(Simulator ${Boost_LIBRARIES})
 add_library(SimulatorTest SimulatorTest.cpp)
 target_link_libraries(SimulatorTest Simulator)
 
 # Executables
 add_executable(reseq main.cpp)
 target_link_libraries(reseq gtest)
-target_link_libraries(reseq ${Boost_LIBRARIES})
-target_link_libraries(reseq ${SEQAN_LIBRARIES})
 target_link_libraries(reseq utilities)
 target_link_libraries(reseq Reference)
 target_link_libraries(reseq DataStats)
 target_link_libraries(reseq ProbabilityEstimates)
 target_link_libraries(reseq Simulator)
+target_link_libraries(reseq ${SEQAN_LIBRARIES})
+target_link_libraries(reseq ${Boost_LIBRARIES})
 # Google test classes need to run their constructor to register, but as they are not referenced the linker throws them out without whole-archive option
-target_link_libraries(reseq -Wl,-whole-archive utilitiesTest -Wl,-no-whole-archive)
-target_link_libraries(reseq -Wl,-whole-archive VectTest -Wl,-no-whole-archive)
-target_link_libraries(reseq -Wl,-whole-archive SeqQualityStatsTest -Wl,-no-whole-archive)
-target_link_libraries(reseq -Wl,-whole-archive ReferenceTest -Wl,-no-whole-archive)
-target_link_libraries(reseq -Wl,-whole-archive AdapterStatsTest -Wl,-no-whole-archive)
-target_link_libraries(reseq -Wl,-whole-archive TileStatsTest -Wl,-no-whole-archive)
-target_link_libraries(reseq -Wl,-whole-archive DataStatsTest -Wl,-no-whole-archive)
-target_link_libraries(reseq -Wl,-whole-archive ProbabilityEstimatesTest -Wl,-no-whole-archive)
-target_link_libraries(reseq -Wl,-whole-archive SimulatorTest -Wl,-no-whole-archive)
+target_link_libraries(reseq "-Wl,--whole-archive" utilitiesTest "-Wl,--no-whole-archive")
+target_link_libraries(reseq "-Wl,--whole-archive" VectTest "-Wl,--no-whole-archive")
+target_link_libraries(reseq "-Wl,--whole-archive" SeqQualityStatsTest "-Wl,--no-whole-archive")
+target_link_libraries(reseq "-Wl,--whole-archive" ReferenceTest "-Wl,--no-whole-archive")
+target_link_libraries(reseq "-Wl,--whole-archive" AdapterStatsTest "-Wl,--no-whole-archive")
+target_link_libraries(reseq "-Wl,--whole-archive" TileStatsTest "-Wl,--no-whole-archive")
+target_link_libraries(reseq "-Wl,--whole-archive" DataStatsTest "-Wl,--no-whole-archive")
+target_link_libraries(reseq "-Wl,--whole-archive" ProbabilityEstimatesTest "-Wl,--no-whole-archive")
+target_link_libraries(reseq "-Wl,--whole-archive" SimulatorTest "-Wl,--no-whole-archive")
