--- a/reseq/CMakeLists.txt
+++ b/reseq/CMakeLists.txt
@@ -2,18 +2,14 @@
 add_library(utilities utilities.cpp)
 add_library(utilitiesTest utilitiesTest.cpp)
 target_link_libraries(utilitiesTest utilities)
-target_link_libraries(utilitiesTest gtest)
 
 add_library(VectTest VectTest.cpp)
-target_link_libraries(VectTest gtest)
 add_library(SeqQualityStatsTest SeqQualityStatsTest.cpp)
-target_link_libraries(SeqQualityStatsTest gtest)
 
 add_library(Reference Reference.cpp)
 target_link_libraries(Reference utilities)
 add_library(ReferenceTest ReferenceTest.cpp)
 target_link_libraries(ReferenceTest Reference)
-target_link_libraries(ReferenceTest gtest)
 
 add_library(AdapterStats AdapterStats.cpp)
 target_link_libraries(AdapterStats Reference)
@@ -98,13 +94,13 @@ target_link_libraries(reseq ProbabilityEstimates)
 target_link_libraries(reseq Simulator)
 target_link_libraries(reseq ${SEQAN_LIBRARIES})
 target_link_libraries(reseq ${Boost_LIBRARIES})
-# Google test classes need to run their constructor to register, but as they are not referenced the linker throws them out without whole-archive option
-target_link_libraries(reseq "-Wl,--whole-archive" utilitiesTest "-Wl,--no-whole-archive")
-target_link_libraries(reseq "-Wl,--whole-archive" VectTest "-Wl,--no-whole-archive")
-target_link_libraries(reseq "-Wl,--whole-archive" SeqQualityStatsTest "-Wl,--no-whole-archive")
-target_link_libraries(reseq "-Wl,--whole-archive" ReferenceTest "-Wl,--no-whole-archive")
-target_link_libraries(reseq "-Wl,--whole-archive" AdapterStatsTest "-Wl,--no-whole-archive")
-target_link_libraries(reseq "-Wl,--whole-archive" TileStatsTest "-Wl,--no-whole-archive")
-target_link_libraries(reseq "-Wl,--whole-archive" DataStatsTest "-Wl,--no-whole-archive")
-target_link_libraries(reseq "-Wl,--whole-archive" ProbabilityEstimatesTest "-Wl,--no-whole-archive")
-target_link_libraries(reseq "-Wl,--whole-archive" SimulatorTest "-Wl,--no-whole-archive")
+
+target_link_libraries(reseq utilitiesTest)
+target_link_libraries(reseq VectTest)
+target_link_libraries(reseq SeqQualityStatsTest)
+target_link_libraries(reseq ReferenceTest)
+target_link_libraries(reseq AdapterStatsTest)
+target_link_libraries(reseq TileStatsTest)
+target_link_libraries(reseq DataStatsTest)
+target_link_libraries(reseq ProbabilityEstimatesTest)
+target_link_libraries(reseq SimulatorTest)
