--- a/skewer/CMakeLists.txt
+++ b/skewer/CMakeLists.txt
@@ -1,5 +1,2 @@
 # Own libraries
-add_library(skewer_fastq src/fastq.cpp)
-
-add_library(skewer_matrix src/matrix.cpp)
-target_link_libraries(skewer_matrix skewer_fastq)
+add_library(skewer_matrix STATIC src/matrix.cpp src/fastq.cpp)
