Code refactoring, additional input checks and unit tests
Replaced most '/n' with std::endl as speed is not important in those contexts, but showing the messages even if the program crashes afterwards is
Added maximum number of shown errors to FragmentDistributionStats::UpdateRefSeqBias
Check if reference bias from file is positive
Sorted utilities alphabetical
Check if more than 64 alleles
Replaced all local solutions with utilities::SafePercent, which returns 50 for zero denominator
For Reference::ReadVariants maximum errors is now set in a constant and when reached it will be printed
Replaced local solutions with TransformDistanceToStartOfErrorRegion to do the +9/10 transformation to start of error region
Constants in classes are now named after google style kMyImportantClassVariable and are static const if other classes need to use them
Added IsGC and IsN to utilities and replaced local solutions
Added unit tests for Sign, IsGC and IsN from utilities
Replaced ModifiedString with own typedefs in utilities
Shifted ReferenceTest to the same level as SeqQualityStatsTest, so we don't get tons of subsequent errors blocking the Reference informations
Added a Reference::GCContentAbsolut without n_count parameter
Removed utilities.cpp as utilities is header only anyways, because we have only short inline functions and template classes
Typedef for integers based on usecase to unify, show and option to quickly change
Moved ReverseComplementor from Reference to utilties
Check if ambiguous characters (N's) are in variant description
Checking for reference sequences and number of reference sequences larger than uint32
Moved Complement from Reference into utilities

--- a/reseq/CMakeLists.txt
+++ b/reseq/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Own libraries
 set(PRIVATE_COMPILE_OPTIONS -Wall -Wextra -Wno-sign-compare -Wno-implicit-fallthrough)
 
-add_library(DataStats STATIC DataStats.cpp AdapterStats.cpp CoverageStats.cpp ErrorStats.cpp FragmentDistributionStats.cpp FragmentDuplicationStats.cpp QualityStats.cpp TileStats.cpp Reference.cpp utilities.cpp)
+add_library(DataStats STATIC DataStats.cpp AdapterStats.cpp CoverageStats.cpp ErrorStats.cpp FragmentDistributionStats.cpp FragmentDuplicationStats.cpp QualityStats.cpp TileStats.cpp Reference.cpp)
 target_link_libraries(DataStats skewer_matrix)
 target_link_libraries(DataStats nlopt)
 target_link_libraries(DataStats ${SEQAN_LIBRARIES})
