Added make install

--- a/reseq/CMakeLists.txt
+++ b/reseq/CMakeLists.txt
@@ -1,5 +1,7 @@
 # Own libraries
 set(PRIVATE_COMPILE_OPTIONS -Wall -Wextra -Wno-sign-compare -Wno-implicit-fallthrough)
+SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
+SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 add_library(DataStats STATIC DataStats.cpp AdapterStats.cpp CoverageStats.cpp ErrorStats.cpp FragmentDistributionStats.cpp FragmentDuplicationStats.cpp QualityStats.cpp TileStats.cpp Reference.cpp)
 target_link_libraries(DataStats skewer_matrix)
@@ -16,7 +18,11 @@ target_compile_options(DataStatsInterface PRIVATE ${PRIVATE_COMPILE_OPTIONS})
 add_executable(reseq main.cpp ProbabilityEstimates.cpp Simulator.cpp AdapterStatsTest.cpp CoverageStatsTest.cpp DataStatsTest.cpp ErrorStatsTest.cpp FragmentDistributionStatsTest.cpp FragmentDuplicationStatsTest.cpp ProbabilityEstimatesTest.cpp QualityStatsTest.cpp ReferenceTest.cpp SeqQualityStatsTest.cpp SimulatorTest.cpp TileStatsTest.cpp utilitiesTest.cpp VectTest.cpp)
 target_link_libraries(reseq DataStats)
 target_link_libraries(reseq gtest)
-#target_link_libraries(reseq nlopt)
 target_link_libraries(reseq ${SEQAN_LIBRARIES})
 target_link_libraries(reseq ${Boost_LIBRARIES})
 target_compile_options(reseq PRIVATE ${PRIVATE_COMPILE_OPTIONS})
+
+install(TARGETS reseq
+	RUNTIME DESTINATION bin
+	LIBRARY DESTINATION lib 
+	ARCHIVE DESTINATION lib)
