--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,6 +1,9 @@
 find_program(PYTHON "python")
 
 if (PYTHON)
+	SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
+	SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+
 	# Python packages
 	FIND_PACKAGE(SWIG 3 REQUIRED)
 	include(${SWIG_USE_FILE})
@@ -28,4 +31,11 @@ if (PYTHON)
 	SWIG_LINK_LIBRARIES(DataStats ${Boost_LIBRARIES})
 	SWIG_LINK_LIBRARIES(DataStats ${SEQAN_LIBRARIES})
 	SWIG_LINK_LIBRARIES(DataStats DataStatsInterface)
+
+	INSTALL(TARGETS _DataStats DESTINATION lib) 
+	install(FILES ${PROJECT_BINARY_DIR}/pyMods/DataStats.py DESTINATION lib)
+
+	INSTALL(FILES ${PROJECT_SOURCE_DIR}/python/plotDataStats.py ${PROJECT_SOURCE_DIR}/python/reseq-prepare-names.py
+		DESTINATION bin
+		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 endif()
